...
            "state" : "translated",
            "value" : "绿色"
          }
        }
      }
    },
    "Help" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Help"
          }
...
            "state" : "translated",
            "value" : "至少包含一个修饰键。"
          }
        }
      }
    },
    "Included for everyone" : {
      "comment" : "Release highlights and contextual feature discovery.",
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "按两次回车键可创建单条备忘录"
          }
        }
      }
    },
    "Preview available to everyone" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preview available to everyone"
...
            "state" : "translated",
            "value" : "欢迎使用 Tildone"
          }
        }
      }
    },
    "What’s New" : {
      "comment" : "Release highlights and contextual feature discovery.",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What’s New"
...
            "state" : "translated",
            "value" : "新功能"
          }
        }
      }
    },
    "What’s New…" : {
      "comment" : "Release highlights and contextual feature discovery.",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What’s New…"
...
